--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -62,17 +62,31 @@
         <h1 class="títulos">BioCorporal<h1>
             <h2> Jabón Antiséptico </h2>
                 <article class="main__contenedor-img-txt">
+                    <div class="image">
                                     <a href=""> <img src="/images/jabon_antiseptico.jpg" alt=""></a>
+                    </div>
                             <div class="main__texto">
                                     <p>🌿Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
                                         oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
                                         antiinflamatorias, analgésicas, refrescantes y tonificantes 💚</p>
                             </div>
-                            <div class="main__info-inivisible">
-                                    <img src="/images/corazon.png" alt="">
-                                    <img src="/images/corazon.png" alt="">
-                            </div>
                 </article>
+                <div class="container">
+                    <div class="overlay"></div>
+                    <div class="box">
+                     <div class="content">
+                      <h3>My Story</h3>
+                      <p>
+                            🌿Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                            oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes 💚
+                      </p>
+                     </div>
+                     <div class="image">
+                      <img src="/images/jabon_antiseptico.jpg" />
+                     </div>
+                    </div>
+                   </div>
             <h2> Jabón Exfoliante </h2>
                 <article class="main__contenedor-img-txt">
                                     <a href=""> <img src="/images/jabon_exfo.jpg" alt=""></a>
