--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -1,3 +1,423 @@
+/*MOBILE*/
+.productCard .producto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+
+/*NOMBRE PRODUCTO*/
+.productCard .producto__texto h4 {                      
+    font-size: 16px;
+    padding-top: 10px;
+}
+
+
+/*BOX TEXTO*/
+.productCard .producto__texto {
+    line-height: 25px;
+    text-align: justify;
+    border-radius: 5px;
+    color: var(--VioletaOscuro);
+    width: 90%;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px;
+    border: 1px solid green;
+}
+
+/*TEXTO*/
+.productCard .producto__texto p {
+    color: var(--VioletaOscuro);
+    padding: 20px;
+    background-color: var(--aquamarineSuave);
+    margin-top: 10px;
+    box-shadow: 1px 1px 5px var(--grisSuave);
+    border-radius: 5px;
+    text-shadow: none;
+}
+
+
+/*BOX IMAGEN*/
+.productCard .producto__imagen {
+    background-color: var(--verdeClaro);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px;
+    border: 1px solid green;
+    margin-top: 10px;
+}
+
+.iconos-eco img{
+    width: 24%;
+    display: inline-flex;
+    border-radius: 50%;
+    padding-top: 15px;
+}
+
+.productCard .producto__imagen h2 {
+    font-size: 30px;
+    padding: 10px;
+    align-self: flex-end;
+}
+
+.productCard .rating {
+    padding-right: 10px;
+}
+
+.productCard .box-imagen img {
+    width: 100%;
+    position: relative;
+    height: 80%;
+    padding: 10px 10px 0 10px;
+    border-radius: 50%;
+}
+
+
+/* BOTÓN QUIERO */
+.productCard .producto__cart {
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.productCard .producto__cart button{
+    font-size: 48px;
+    background-color: var(--azulSuave);
+    color: white;
+    border-radius: 8px;
+}
+
+
+
+.productCard .producto__cart a {
+    text-decoration: none;
+    color: white;
+    background-color: var(--azulSuave);
+    border: 2px solid white;
+    border-radius: 25px;
+    font-size: 24px;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.productCard .producto__cart a:hover {
+    color: var(--azulSuave);
+    background-color: var(--verdeAmarillento);
+    border: 1px solid var(--azul);
+}
+
+
+/* NUESTRA COMUNIDAD OPINA */
+.productCard .titulares {
+    text-align: center;
+    padding: 10px;
+    background-color: var(--verdeOscuro);
+}
+
+.productCard .comunidad {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex-wrap:nowrap;
+    justify-content: space-evenly;
+    padding: 50px 30px;
+
+}
+
+.productCard .card__perfil {
+    border: 2px solid antiquewhite;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgba(127, 255, 212, 0.5);;
+    color: var(--VioletaOscuro);
+    text-align: center;
+}
+
+.productCard .card__perfil p {
+    padding-top: 10px;
+    color: var(--VioletaOscuro);
+    text-shadow: none;
+    font-size: 12px;
+    font-size: 12px;
+    background-color: rgba(127, 255, 212, 0.9);
+    border-radius: 8px;}
+
+.productCard .card__nombre img {
+    width: 25%;
+    border-radius: 50%;
+    padding-top: 15px;
+}
+
+.productCard .card__nombre h2 {
+    padding-top: 5px;
+}
+
+
+
+/* PRODUCTOS RELACIONADOS */
+.productCard .row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.productCard .productosRelacionados {
+    text-align: center;
+    margin-bottom: 10px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.productCard .card.estilo-c {
+    width: 100%;
+    margin-bottom: 40px;
+    border: 2px solid antiquewhite;
+    box-shadow: 1px 1px 5px var(--grisSuave);
+}
+
+.productCard .estilo-c:hover {
+    border: solid var(--verdeOscuro) 2px;
+  }
+
+.productCard .estilo-c .img-container .promo {
+    position: absolute;
+    background: var(--aquamarine);
+    color: var(--VioletaOscuro);
+    top: 10px;
+    left: 0;
+    font-size: 20px;
+    padding: 15px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.productCard .estilo-c .info-container {
+    background-color: var(--aquamarineSuave);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding: 5px;
+    height: 140px;
+}
+
+.productCard .estilo-c .info-container .rating{
+align-self: flex-end;
+}
+
+.productCard .estilo-c .info-container p a{
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    background-color: var(--azulSuave);
+    border-radius: 25px;
+}
+
+.productCard .estilo-c .add-cart:hover {
+    color: var(--azulSuave);
+    background-color: white;
+    border: 1px solid var(--azul);
+}
+
+.productCard .estilo-c .info-container h4 {
+    font-size: 12px;
+
+}
+
+.productCard .estilo-c .info-container h3 {
+    font-size: 24px;
+}
+
+.productCard .estilo-c {
+    margin-right: 0px;
+}
+
+.productCard .estilo-c .img-container {
+    overflow: hidden;
+    height: 300px;
+    position: relative;
+}
+
+.productCard .estilo-c .img-container img {
+    width: 100%;
+    position: absolute;
+    transition: all 0.5s;
+}
+
+.productCard .estilo-c:hover .img-container img {
+    transform: scale(1.2);
+}
+
+.productCard .estilo-c .info-container h2 {
+    font-size: 22px;
+    color: var(--VioletaOscuro);
+}
+
+.productCard .estilo-c .info-container h4 {
+    font-size: 18px;
+    color: var(--VioletaOscuro);
+}
+
+.productCard .estilo-c .info-container h3 {
+    color: var(--verdeAmarillento)
+}
+
+
+@media(min-width: 460px) {
+
+    .productCard .producto {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 30px;
+        margin-bottom: 20px;
+
+    }
+
+    .productCard .producto__texto {
+        line-height: 25px;
+        padding: 0px 10px;
+    }
+
+    .productCard .producto__texto h4 {
+        font-size: 20px;
+        padding-top: 10px;
+
+    }
+
+    .productCard .producto__imagen {
+        margin-top: 10px;
+    }
+
+    .productCard .producto__imagen h2 {
+        font-size: 30px;
+        padding: 10px 10px;
+    }
+
+    .productCard .rating {
+        padding-right: 10px;
+    }
+
+    /* BOTÓN "QUIERO!" */
+    .productCard .producto__cart {
+        margin-top: 20px;
+        padding: 10px;
+    }
+
+    .productCard .producto__cart a {
+        margin-top: 2px;
+        border-radius: 25px;
+        font-size: 16px;
+        padding: 10px;
+    }
+
+
+    /* NUESTRA COMUNIDAD OPINA */
+    .productCard .tarjetas {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-evenly;
+        padding-bottom: 80px;
+    }
+
+    .productCard .card__perfil {
+        font-size: 14px;
+    }
+
+    /* PRODUCTOS RELACIONADOS */
+    .productCard .row {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding: 30px;
+        justify-content: center;
+        align-items: center;
+        column-gap: 15px;
+      }
+
+    .productCard .productosRelacionados {
+        text-align: center;
+        margin-bottom: 10px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .productCard .card.estilo-c {
+        width: 45%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+
+    .productCard .estilo-c .img-container .promo {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        font-size: 20px;
+        padding: 15px;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+
+    .productCard .estilo-c .info-container {
+        height: 140px;
+        border-radius: 5px;
+        padding-left: 10px;
+
+    }
+
+
+    .productCard .estilo-c .info-container h2 {
+        font-size: 16px;
+
+    }
+
+    .productCard .estilo-c .info-container h4 {
+        font-size: 12px;
+
+    }
+
+    .productCard .estilo-c .info-container h3 {
+        font-size: 24px;
+    }
+
+    .productCard .estilo-c .add-cart {
+        padding: 5px;
+        border: 1px solid white;
+        border-radius: 15px;
+        font-size: 15px;
+    }
+
+    .productCard .banner img{
+        display:none;
+    }
+}
+
+
+
+@media(min-width: 960px) {
+
 /* Producto principal */
 .productCard .producto {
     display: flex;
@@ -10,31 +430,26 @@
 .productCard .producto__texto {
     line-height: 30px;
     text-align: justify;
-    background-color: var(--verdeClaro);
     border-radius: 5px;
     color: var(--VioletaOscuro);
+    width: 90%;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px;
+    border: 1px solid green;
 }
 
 .productCard .producto__texto p {
     color: var(--VioletaOscuro);
     padding: 20px;
     background-color: var(--aquamarineSuave);
-    margin: 20px;
+    margin-top: 10px;
     box-shadow: 1px 1px 5px var(--grisSuave);
     border-radius: 5px;
 }
 
-.productCard .producto__texto h4 {
-    font-size: 20px;
-    padding-top: 15px;
-
-}
-
-.productCard .producto__imagen {
-    background-color: var(--verdeClaro);
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
 
 .productCard .producto__imagen h2 {
     color: var(--VioletaOscuro);
@@ -49,19 +464,20 @@
 
 }
 
-.productCard .producto__imagen img {
-    width: 500px;
-    height: 80%;
-    padding: 10px;
-    border-radius: 50%;
-}
-
 /* Botón "Lo quiero!" */
 .productCard .producto__cart {
     margin-top: 20px;
     padding: 10px;
     display: flex;
     justify-content: center;
+}
+
+.productCard .producto__cart button{
+    font-size: 48px;
+    background-color: var(--azulSuave);
+    border-radius: 50%;
+    color:white;
+    padding: 10px;
 }
 
 .productCard .producto__cart a {
@@ -71,7 +487,7 @@
     background-color: var(--azulSuave);
     border: 2px solid white;
     border-radius: 25px;
-    font-size: 16px;
+    font-size: 24px;
     padding: 10px;
     font-weight: bold;
 }
@@ -91,31 +507,6 @@
     background-color: var(--verdeOscuro);
 }
 
-.productCard .tarjetas {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    flex-wrap:nowrap;
-    justify-content: space-evenly;
-    padding: 50px 30px;
-}
-
-.productCard .card__perfil {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: var(--aquamarine);
-    color: var(--VioletaOscuro);
-    text-align: center;
-}
-
-.productCard .card__perfil p {
-    padding-top: 10px;
-    color: var(--VioletaOscuro);
-    text-shadow: none;
-}
-
 /* .productCard .card__perfil:hover img {
     transform: rotate(-360deg);
 } */
@@ -128,7 +519,7 @@
 }
 
 .productCard .card__nombre img {
-    width: 30%;
+    width: 15%;
     border-radius: 50%;
     transition: all .15s;
 }
@@ -171,7 +562,6 @@
 }
 
 .productCard .estilo-c {
-    margin-right: 30px;
     box-shadow: 1px 1px 5px var(--grisSuave);
 }
 
@@ -270,302 +660,7 @@
     display: none;
 }
 
-@media(max-width: 960px) {
-    /* ************************************************************************************ */
-    /* Producto principal */
-
-    .productCard .producto {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 30px;
-        margin-bottom: 20px;
-
-    }
-
-    .productCard .producto__texto {
-        line-height: 25px;
-        padding: 0px 10px;
-    }
-
-    .productCard .producto__texto h4 {
-        font-size: 20px;
-        padding-top: 10px;
-
-    }
-
-    .productCard .producto__imagen h2 {
-        font-size: 30px;
-        padding: 10px 10px;
-    }
-
-    .productCard .rating {
-        padding-right: 10px;
-    }
-
-    .productCard .producto__imagen img {
-        width: 100%;
-        position: relative;
-        height: 80%;
-        padding: 10px 10px 0 10px;
-    }
-
-    /* Botón "Lo quiero!" */
-    .productCard .producto__cart {
-        margin-top: 20px;
-        padding: 10px;
-    }
-
-    .productCard .producto__cart a {
-        margin-top: 2px;
-        border-radius: 25px;
-        font-size: 16px;
-        padding: 10px;
-    }
-
-
-    /* Nuestra Comunidad Opina */
-
-    .productCard .tarjetas {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
-        padding-bottom: 80px;
-    }
-
-    .productCard .card__perfil {
-        font-size: 14px;
-
-    }
-
-    /* Productos Relacionados */
-
-    .productCard .row {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 30px;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .productCard .productosRelacionados {
-        text-align: center;
-        margin-bottom: 10px;
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-
-    .productCard .card.estilo-c {
-        width: 300px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 40px;
-    }
-
-    .productCard .estilo-c .img-container .promo {
-        position: absolute;
-        top: 10px;
-        left: 0;
-        font-size: 20px;
-        padding: 15px;
-        border-bottom-right-radius: 25px;
-        border-top-right-radius: 25px;
-    }
-
-    .productCard .estilo-c .info-container {
-        height: 140px;
-        border-radius: 5px;
-        padding-left: 10px;
-
-    }
-
-
-    .productCard .estilo-c .info-container h2 {
-        font-size: 16px;
-
-    }
-
-    .productCard .estilo-c .info-container h4 {
-        font-size: 12px;
-
-    }
-
-    .productCard .estilo-c .info-container h3 {
-        font-size: 24px;
-    }
-
-    .productCard .estilo-c .add-cart {
-        padding: 5px;
-        border: 1px solid white;
-        border-radius: 15px;
-        font-size: 15px;
-    }
-
-    .productCard .banner img{
-        display:none;
-    }
+.productCard .estilo-c #no-desktop{
+    display:none;
 }
-
-
-@media (max-width: 460px) {
-    /* ************************************************************************* */
-    /* Producto principal */
-
-    .productCard .producto {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 10px;
-        margin-bottom: 20px;
-
-    }
-
-    .productCard .producto__texto {
-        line-height: 25px;
-        padding: 0px 10px;
-    }
-
-    .productCard .producto__texto h4 {
-        font-size: 16px;
-        padding-top: 10px;
-
-    }
-
-    .productCard .producto__imagen h2 {
-        font-size: 30px;
-        padding: 10px 10px;
-    }
-
-    .productCard .rating {
-        padding-right: 10px;
-    }
-
-    .productCard .producto__imagen img {
-        width: 100%;
-        position: relative;
-        height: 80%;
-        padding: 10px 10px 0 10px;
-    }
-
-    /* Botón "Lo quiero!" */
-    .productCard .producto__cart {
-        margin-top: 20px;
-        padding: 10px;
-    }
-
-    .productCard .producto__cart a {
-        margin-top: 2px;
-        border-radius: 25px;
-        font-size: 16px;
-        padding: 10px;
-    }
-
-
-    /* Nuestra Comunidad Opina */
-
-    .productCard .card__perfil {
-        width: 100%;
-        padding: 20px;
-        flex-direction: column;
-        font-size: 12px;
-        display: flex;
-        flex-wrap: wrap;
-      }
-
-    .productCard .tarjetas{
-        
-    }
-
-    /* Productos Relacionados */
-
-    .productCard .row {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        padding: 30px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .productCard .productosRelacionados {
-        text-align: center;
-        margin-bottom: 10px;
-        height: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-
-    .productCard .card.estilo-c {
-        width: 300px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 40px;
-    }
-
-    .productCard .estilo-c .img-container .promo {
-        position: absolute;
-        top: 10px;
-        left: 0;
-        font-size: 20px;
-        padding: 15px;
-        border-bottom-right-radius: 25px;
-        border-top-right-radius: 25px;
-    }
-
-    .productCard .estilo-c .info-container {
-        height: 140px;
-        border-radius: 5px;
-        padding-left: 10px;
-
-    }
-
-
-    .productCard .estilo-c .info-container h2 {
-        font-size: 16px;
-
-    }
-
-    .productCard .estilo-c .info-container h4 {
-        font-size: 12px;
-
-    }
-
-    .productCard .estilo-c .info-container h3 {
-        font-size: 24px;
-    }
-
-
-    .productCard .estilo-c .add-cart {
-        padding: 5px;
-        border: 1px solid white;
-        border-radius: 15px;
-        font-size: 15px;
-    }
-
-    .productCard .estilo-c {
-        margin-right: 0px;
-    }
-
-    .productCard .banner img {
-        width: 100%;
-        transform: scale(1);
-        margin-bottom: -7px;
-        display: block;
-    }
-
 }
