--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/5a8fb06a25.js" crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script> 
+  <script src="https://kit.fontawesome.com/46efef2c4e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
   <title>Product Card</title>
 </head>
@@ -38,7 +39,7 @@
         <div class="header__opciones">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/product">Productos</a></li>
+                <li><a href="/productAll">Productos</a></li>
                 <li><a href="">Quienes somos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
@@ -52,15 +53,22 @@
     </nav>
 </header>
   <main>
-    <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
     <section class="producto">
-      <div class="producto__imagen">
-        <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
-        <h2>$ 300.-</h2>
-        <span class="rating">⭐⭐⭐⭐</span>
-      </div>
-      <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
       <div class="producto__texto">
+        <div class="producto__imagen">
+          <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
+          <div class="box-imagen">
+          <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
+          </div>
+          <h2>$ 300.-</h2>
+          <span class="rating">⭐⭐⭐⭐</span>
+        </div>
+        <div class="iconos-eco">
+          <img src="/images/icono1.jpg" alt="">
+          <img src="/images/icono2.jpg" alt="">
+          <img src="/images/icono3.jpg" alt="">
+          <img src="/images/icono4.jpg" alt="">
+        </div>
         <p>La luffa (o esponja vegetal) tiene propiedades exfoliantes, ideal
           para zonas a suavizar: codos, pies, manos. <br>
           ♻️Cuando consideramos que ha cumplido su ciclo, la podemos tirar en el compost, o
@@ -73,49 +81,9 @@
           <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
-          <a href="#" class="add-cart">Lo quiero! 🛒</a>
-        </div>
-      </div>
-    </section>
-    <h2 class="titulares">Nuestra comunidad opina</h2>
-    <section class="tarjetas">
-      <div class="card__perfil">
-        <div class="card__nombre">
-          <img src="/images/cara8.jpg" alt="">
-          <h2>Ramiro Cunar</h2>
-        </div>
-        <div class="card__descripcion">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-            dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
-            quaerat esse
-            quisquam nulla eaque modi voluptate, consectetur ad.</p>
-        </div>
-      </div>
-      <div class="card__perfil">
-        <div class="card__nombre">
-          <img src="/images/cara5.jpg" alt="">
-          <h2>Mariana Blas</h2>
-        </div>
-        <div class="card__descripcion">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-            dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
-            quaerat esse
-            quisquam nulla eaque modi voluptate, consectetur ad.</p>
-        </div>
-      </div>
-      <div class="card__perfil">
-        <div class="card__nombre">
-          <img src="/images/cara4.jpg" alt="">
-          <h2>Samira Luna</h2>
-        </div>
-        <div class="card__descripcion">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-            dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
-            quaerat esse
-            quisquam nulla eaque modi voluptate, consectetur ad.</p>
+        <button><i class="fa-solid fa-share-nodes"></i></button>
+        <button><i class="fa-solid fa-star"></i></button>
+        <button class="quiero"><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
       </div>
     </section>
@@ -133,11 +101,11 @@
                 <h3>$ 300.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="" class="add-cart">Lo quiero! 🛒</a>
+            <a href="" class="add-cart">Quiero! 🛒</a>
           </div>
           </div>
           <div class="card estilo-c">
-            <a href="#">
+            <a href="/productCard">
               <div class="img-container">
                 <img src="/images/jabonExfo_luffa.jpg" alt="producto">
                 <span class="promo">25% off</span>
@@ -148,7 +116,7 @@
                     <h3>$ 600.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero! 🛒</a>
+            <a href="#" class="add-cart">Quiero! 🛒</a>
           </div>
           </div>
           <div class="card estilo-c">
@@ -163,9 +131,72 @@
                 <h3>$ 300.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero! 🛒</a>
+            <a href="#" class="add-cart">Quiero! 🛒</a>
           </div>
           </div>
+          <div class="card estilo-c" id="no-desktop">
+              <div class="img-container">
+                <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+                <span class="promo">15% off</span>
+              </div>
+              <div class="info-container">
+                <h2>Kit Coco</h2> 
+                <span class="rating">⭐⭐⭐⭐</span>
+                <h4>BioCapilar</h4>
+                <h3>$ 300.00.-</h3>
+            <button><i class="fa-solid fa-share-nodes"></i></button>
+            <button><i class="fa-solid fa-star"></i></button>
+            <p><a href="/productCart" class="add-cart">Quiero! 🛒</a></p>
+          </div>
+          </div>
+        </section>
+        <h2 class="titulares">Nuestra comunidad opina</h2>
+        <section class="comunidad">
+          <div class="card__perfil">
+            <div class="card__nombre">
+              <img src="/images/cara8.jpg" alt="">
+              <h2>Ramiro Cunar</h2>
+            </div>
+            <div class="card__descripcion">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                quaerat esse
+                quisquam nulla eaque modi voluptate, consectetur ad.</p>
+            </div>
+          </div>
+          <div class="card__perfil">
+            <div class="card__nombre">
+              <img src="/images/cara5.jpg" alt="">
+              <h2>Mariana Blas</h2>
+            </div>
+            <div class="card__descripcion">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                quaerat esse
+                quisquam nulla eaque modi voluptate, consectetur ad.</p>
+            </div>
+          </div>
+          <div class="card__perfil">
+            <div class="card__nombre">
+              <img src="/images/cara4.jpg" alt="">
+              <h2>Samira Luna</h2>
+            </div>
+            <div class="card__descripcion">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                quaerat esse
+                quisquam nulla eaque modi voluptate, consectetur ad.</p>
+            </div>
+          </div>
+          <div class="box-imagen-consejo1">
+            <img src="/images/consejo1.jpg" alt="">
+            </div>
+            <div class="video">
+              <video src="https://www.youtube.com/watch?v=wTkMFSgqi1I"></video>
+            </div>
         </section>
         <div class="banner">
           <img src="/images/foto_consejos.jpg" alt="">
