--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -12,45 +12,7 @@
 
 
 <body class="carrito">
-    <header class="header">
-        <div class="header__container">
-            <div class="header__logo">
-                <img src="/images/logo.png" alt="logo">
-            </div>
-            <div class="header__busqueda">
-                <input type="text" class="barra">
-                <img src="/images/Lupa.png" alt="" class="barra__lupa">
-            </div>
-            <div class="header__user">
-                <a href="/login">
-                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
-                    <p>Usuario</p>
-                </a>
-            </div>
-        </div>
-        <div class="header__burger">
-            <i class="fas fa-bars"></i>
-        </div>
-        <nav class="header__nav">
-            <div class="header__localizacion">
-                <a href="">Estas en "lugar"</a>
-            </div>
-            <div class="header__opciones">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/productAll">Productos</a></li>
-                    <li><a href="">Quienes somos</a></li>
-                    <li><a href="">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="header__iconos">
-                <a href="#"><img src="/images/configuracion.png" alt=""></a>
-                <a href="#"><img src="/images/campana.png" alt=""></a>
-                <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
-                <a href="#"><img src="/images/corazon.png" alt=""></a>
-            </div>
-        </nav>
-    </header>
+   
 
 
 
@@ -71,10 +33,6 @@
                     <h3>Jabón con Pétalos</h3>
                     <h4>Este contiene aceites naturales que devuelven
                         la humedad e hidratación a tu piel.
-                        <!--; de igual manera conseguirás 
-                        una piel suave y lisa debido a su efecto astringente que regenera 
-                        la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
-                        le darán a tu piel un aspecto rejuvenecedor.-->
                     </h4>
                 </div>
             </article>
@@ -82,7 +40,7 @@
             <!-- BOTONES -->
             <div>
                 <div class="carrito-buttons1">
-                    <h2>CANTIDAD 1</h2>
+                    <h2>CANTIDAD: 1</h2>
                     <h2>$720-</h2>
                 </div>
 
@@ -104,17 +62,13 @@
                     <h3>Jabón y esponja vegetal</h3>
                     <h4>Este contiene aceites naturales que devuelven
                         la humedad e hidratación a tu piel.
-                        <!--; de igual manera conseguirás 
-                        una piel suave y lisa debido a su efecto astringente que regenera 
-                        la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
-                        le darán a tu piel un aspecto rejuvenecedor.-->
                     </h4>
                 </div>
             </article>
 
             <div>
                 <div class="carrito-buttons1">
-                    <h2>CANTIDAD 1</h2>
+                    <h2>CANTIDAD: 1</h2>
                     <h2>$460-</h2>
                 </div>
 
@@ -135,17 +89,13 @@
                     <h3>Toallas de algodon</h3>
                     <h4>Este contiene aceites naturales que devuelven
                         la humedad e hidratación a tu piel.
-                        <!--; de igual manera conseguirás 
-                        una piel suave y lisa debido a su efecto astringente que regenera 
-                        la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
-                        le darán a tu piel un aspecto rejuvenecedor.-->
                     </h4>
                 </div>
             </article>
 
             <div>
                 <div class="carrito-buttons1">
-                    <h2>CANTIDAD 1</h2>
+                    <h2>CANTIDAD: 1</h2>
                     <h2>$220-</h2>
                 </div>
 
