--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -105,9 +105,8 @@
                 </div>
             </div>
 
-
-
             <!-- LISTA -->
+            <div class="carrito-cupon-lista">
             <div class="carrito-contenedor-lista">
 
                 <h4>Cupón de Descuento</h4>
@@ -123,7 +122,7 @@
 
                 <h4>Seleccione Método de Pago</h4>
 
-
+            
                 <div class="carrito-lista">
                     <select name="Tarjetas de Crédito" id="Tarjetas de Crédito">
                         <optgroup label="Tarjetas de Crédito">
@@ -145,6 +144,13 @@
                     </select>
                 </div>
             </div>
+            </div>
+
+            <div class="carrito-buttons3">
+                <button type="submit">Limpiar Carrito</button>
+                <button type="submit">Siguiente Paso</button>
+            </div>
+
         </section>
 
     </main>
