--- a/site_ViveBio/public/css/carrito.css
+++ b/site_ViveBio/public/css/carrito.css
@@ -1,5 +1,4 @@
 .carrito-contenedor {
-   
     background-color: rgba(184, 247, 196, 0.9);
     color:rgb(92, 92, 92);
     width: 95%;
@@ -11,12 +10,15 @@
 }
 
 .carrito_pasos p {
-    width: 100%;
+    background-color: rgba(190, 118, 232, 0.3);
+    width: 90%;
     padding: 20px;
-    color: rgb(47, 46, 46);
-    margin-bottom: 5px;
+    color: rgb(75, 73, 73);
+    margin: 15px 0 5px;
     display: flex;
     justify-content: center;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
 }
 
 .carrito-box {
@@ -24,7 +26,9 @@
     border: solid 2px #7FA794;
     margin-top: 20px;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
 }
 
 .carrito-images {
@@ -35,6 +39,7 @@
     width: 100%;
     height: 100%;
     padding: 5px;  
+    border-radius: 20px;
 }
 
 .carrito-titulo h3 {
@@ -50,8 +55,8 @@
     padding: 10px;
     color: rgb(34, 34, 34);
     text-align: left;
-    margin-left: 5px;
-    /* border: solid 2px yellow; */
+    margin: 15px;
+    /*border: solid 2px yellow; */
 }
 
 .carrito-buttons1 {
@@ -59,13 +64,23 @@
     font-size: 12px;
     padding: 10px;
     display: flex;
-    justify-content: space-between ;
+    justify-content: space-between;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
     /* border: solid 2px rgb(118, 12, 12); */
  }
 
+ .carrito-buttons2 button{
+    background-color: rgba(190, 118, 232, 0.3);
+    font-size: 17px;
+    padding: 10px;
+    margin: 10px 0 20px;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
+}
+
 .carrito-buttons2 {
     width: 100%;
-    padding: 10px;
     display: flex;
     justify-content: space-around;
     /* border: solid 2px rgb(118, 12, 12); */
@@ -77,11 +92,9 @@
     width: 100%;
     padding: 5px;
     text-align: left;
-    
     margin-bottom: 10px;
     /* border: solid 2px orange; */ 
 }
-
 
 .carrito-contenedor-lista h4 {
     color: rgb(47, 46, 46);
@@ -91,15 +104,6 @@
     text-align: center;
     /* border: solid 2px rgb(199, 71, 246); */
 }
-
-/* .carrito-precio {
-    width: 100%;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    text-decoration: none;
-    text-shadow: 0 0 2px black;
-    border: solid 2px rgb(199, 71, 246);
-} */
 
 .carrito-input {
     width: 100%;
@@ -112,12 +116,44 @@
 .carrito-lista {
     width: 100%;
     padding: 10px;
-    margin: 5px 0 30px;
+    margin: 5px 0 10px;
     text-shadow: 0 0 2px black;
     display: flex;
     justify-content: space-around;
     /* border: solid 2px rgb(118, 12, 12); */
 }
+
+.carrito-cupon-lista {
+    width: 100%;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
+}
+
+.carrito-buttons3 button{
+    background-color: rgba(190, 118, 232, 0.3);
+    font-size: 17px;
+    padding: 10px;
+    margin: 20px 0 20px;
+    border: solid 3px #aa80a6;
+    border-radius: 20px;
+}
+
+.carrito-buttons3 {
+   width: 100%;
+   padding: 10px;
+   display: flex;
+   justify-content: space-between;
+   /* border: solid 2px rgb(118, 12, 12); */
+}
+
+@media
+
+
+
+
+
+
+
 
 /* npx nodemon app */
 
