Login and Register routes Added

--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -11,3 +11,5 @@
 @import './product.css';
 @import './productCard.css';
 @import './productAll.css';
+@import './addProducts.css';
+@import './editProducts.css';
