--- a/site_ViveBio/views/login.ejs
+++ b/site_ViveBio/views/login.ejs
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
+<%- include('./partials/head', {
+    title : "Login"
+}) %> 
 
 <body class="login">
     <header class="header_login">
@@ -31,7 +26,7 @@
                 </div>
                 <div class="login_box_2">
                     <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
-                    <a href="/register"
+                    <a href="/users/register"
                         style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Registrate!</a>
                 </div>
             </div>
