--- a/site_ViveBio/views/partials/header.ejs
+++ b/site_ViveBio/views/partials/header.ejs
@@ -1,16 +1,18 @@
 <header class="header">
     <div class="header__container">
         <div class="header__logo">
-            <img src="/images/logo.png" alt="logo">
+            <a href="/"><img src="/images/logo.png" alt="logo"></a>
         </div>
         <div class="header__busqueda">
             <input type="text" class="barra">
             <img src="/images/Lupa.png" alt="" class="barra__lupa">
         </div>
         <div class="header__user">
-            <a href="/login">
+            <a href="/users/login">
                 <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                 <p>Usuario</p>
+                <a href="/products/add">Agregar Producto</a>
+                <a href="/products/edit">Editar producto</a>
             </a>
         </div>
     </div>
