--- a/site_ViveBio/views/register.ejs
+++ b/site_ViveBio/views/register.ejs
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
+<%- include('./partials/head', {
+    title : "Register"
+}) %> 
+
 
 <body class="register">
     <header class="header_register">
