--- a/site_ViveBio/src/views/products/addProducts.ejs
+++ b/site_ViveBio/src/views/products/addProducts.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head', { title : "Agregar Producto" }) %>
+<%- include('../partials/head', { title : "Agregar Producto" }) %>
 
     <body class="addProducts">
-        <%- include('./partials/header') %>
+        <%- include('../partials/header') %>
             <main>
                 <section class="add_container">
                     <h3>Agregar Producto</h3>
@@ -50,7 +50,7 @@
                     </form>
                 </section>
             </main>
-            <%- include('./partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
 </html>
