--- a/site_ViveBio/src/views/products/editProducts.ejs
+++ b/site_ViveBio/src/views/products/editProducts.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head', { title : "Editar Producto" }) %>
+<%- include('../partials/head', { title : "Editar Producto" }) %>
 
     <body class="edit_product">
-        <%- include('./partials/header') %>
+        <%- include('../partials/header') %>
             <main>
                 <main>
                     <div class="edit_find">
@@ -57,7 +57,7 @@
                     </section>
                 </main>
             </main>
-            <%- include('./partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
 </html>
