--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head', {
-  title : "Product Card"
+<%- include('../partials/head', {
+  title : "Detalle de Producto"
 }) %> 
 
 <body class="productCard">
-  <%- include('./partials/header') %> 
+  <%- include('../partials/header') %> 
   <main>
     <section class="producto">
       <div class="producto__texto">
@@ -158,7 +158,7 @@
         </div>
   </main>
 
-  <%- include('./partials/footer') %> 
+  <%- include('../partials/footer') %> 
 </body>
 
 </html>
