--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -11,8 +11,8 @@
             <a href="/users/login">
                 <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                 <p>Usuario</p>
-                <a href="/products/add">Agregar Producto</a>
-                <a href="/products/edit">Editar producto</a>
+                <a class="user_control" href="/products/add">Agregar Producto</a>
+                <a class="user_control" href="/products/edit">Editar producto</a>
             </a>
         </div>
     </div>
@@ -26,7 +26,7 @@
         <div class="header__opciones">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/product">Productos</a></li>
+                <li><a href="/products/all">Productos</a></li>
                 <li><a href="">Quienes somos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
