--- a/site_ViveBio/src/views/products/editProducts.ejs
+++ b/site_ViveBio/src/views/products/editProducts.ejs
@@ -6,10 +6,10 @@
         <%- include('../partials/header') %>
             <main>
                 <main>
-                    <div class="edit_find">
+                    <!-- <div class="edit_find">
                         <label for="">Buscar Producto</label>
                         <input type="text" style="padding:5px;">
-                    </div>
+                    </div> -->
                     <section class="add_container">
                         <h3>Editar Producto</h3>
                         <form action="" method="">
@@ -52,7 +52,7 @@
                             </div>
                             <div class="register_center">
 
-                                <div class="register_button">
+                                <div class="add_button">
                                     <button type="submit">Actualizar</button>
                                     <button type="reset">Limpiar</button>
                                 </div>
