--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -39,12 +39,16 @@
 
 .login_container {
     width: 80%;
-    background-color: rgba(255, 255, 255, 0.9);
+    /* background-color: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
     box-shadow: 5px 5px 10px var(--VerdeSuave);
+    border: 1px solid ; */
     padding: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .15);
+    backdrop-filter: blur(5px);
     border: 1px solid var(--verdeFuerte);
-
 }
 
 .login_form-box {
