--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
             <a href="/"><img src="/images/logo.png" alt="logo"></a>
         </div>
         <div class="header__busqueda">
-            <input type="text" class="barra">
+            <input type="text" class="barra" style="padding-left:5px;">
             <img src="/images/Lupa.png" alt="" class="barra__lupa">
         </div>
         <div class="header__user">
