--- a/site_ViveBio/src/views/products/addProducts.ejs
+++ b/site_ViveBio/src/views/products/addProducts.ejs
@@ -28,9 +28,9 @@
                                 </select>
                             </div>
                             <div class="add_form-box">
-                                <label for="size"><strong>Tamaño</strong></label>
+                                <label for="propiety"><strong>Propiedad</strong></label>
                                 <select name="size" id="size">
-                                    <option value="" hidden selected>Selecciona el tamaño...</option>
+                                    <option value="" hidden selected>Seleccione la propiedad...</option>
                                 </select>
                             </div>
                             <div class="add_form-box">
